[project]
name = "switrs-to-sqlite"
dynamic = ["version"]
description = "Script for converting SWITRS reports to SQLite."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Alexander Gude", email = "alex.public.account@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
keywords = ["switrs", "sqlite", "data"]
dependencies = []

[project.scripts]
switrs_to_sqlite = "switrs_to_sqlite.main:main"

[project.urls]
Homepage = "https://github.com/agude/SWITRS-to-SQLite"
Repository = "https://github.com/agude/SWITRS-to-SQLite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "switrs_to_sqlite/main.py"

[tool.hatch.build.targets.wheel]
packages = ["switrs_to_sqlite"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
